--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewpoint" content="width=device-width, initial-scale=1">
   <title>Contact | Joseph Calabrese</title>
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
