--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <meta charset="UTF-8">
   <meta name="viewpoint" content="width=device-width, initial-scale=1">
   <title>About | Joseph Calabrese</title>
@@ -26,7 +27,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/img_0069.jpg" class="auth-image" alt="Joseph Calabrese">
+      <img src="assets/images/IMG_0069.jpg" class="auth-image" alt="Joseph Calabrese">
 
       <p>My name is Joseph Calabrese. I am 27 years old and live in Anaheim, CA. My hobbies inlcude anything that has to do with being outside including dirtbiking. My favorite sport by far is Hockey, I've been playing for 18 years.</p>
 
