--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 
 <head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <meta charset="UTF-8">
   <meta name="viewpoint" content="width=device-width, initial-scale=1">
   <title>Contact | Joseph Calabrese</title>
